--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Gotta Match'em all</title>
+        <title>Meme Cat Match</title>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" charset="utf-8"></script>
         <script src="app.js" charset="utf-8"></script>
         <link rel="stylesheet" href="styles.css">
@@ -52,10 +52,10 @@
                 </div>
 
                 
-                <div class="level2">
-                    <!-- <div class="card">
+                <!-- <div class="level2">
+                    <div class="card">
                         <img class="main" src="" alt="b"> <img class="back" src="https://images-cdn.9gag.com/photo/aGjyXwz_460s.jpg" alt="sleepy cat">
-                    </div> -->
+                    </div>
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
@@ -98,6 +98,6 @@
                     <div class="card"></div>
                     <div class="card"></div>
                 </div>
-            </div>
+            </div> -->
     </body>
     </html>
