--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Memory Match</h1>
-        <button id="btn">Reset</button>
+        <!-- <button id="btn">Reset</button> -->
             <div class="container">
                 <div class="winner" id="winner-message"><h1>WINNER</h1></div>
                 <div class="deck">
@@ -54,7 +54,7 @@
                     onclick="flipOver(event)"></div>
                     <div class="card black color" id="black"
                     onclick="flipOver(event)"></div>
-                </div>                
+                </div>
             </div>
         </body>
     </html>
